[tool.poetry]
name = "elons-doge"
version = "0.1.0"
description = "Fetch DOGE news, memes, tweets, posts, or quotes on Elon's puppy!"
authors = ["JD"]
license = "GNU GPLv3"

readme = 'README.md'
repository = 'https://github.com/joeld1/elons-doge'
homepage = 'https://github.com/joeld1/elons-doge'

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
